--- a/notebooks/Numpy/003_索引练习.ipynb
+++ b/notebooks/Numpy/003_索引练习.ipynb
@@ -2,13 +2,826 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,   1,   8,  27,  64, 125, 216, 343, 512, 729], dtype=int32)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 一维数组\n",
+    "a = np.arange(10)**3\n",
+    "\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 一维数组的索引\n",
+    "\n",
+    "a[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8, 27, 64], dtype=int32)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 一维数组的切片\n",
+    "a[2:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1,  27, 125, 343], dtype=int32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 一维数组的切片, start:stop:step\n",
+    "a[1:8:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1000,     1, -1000,    27, -1000,   125,   216,   343,   512,\n",
+       "         729], dtype=int32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 切片赋值，影响的原始值 (切片返回的是浅拷贝)\n",
+    "\n",
+    "a[:6:2] = -1000 \n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  729,   512,   343,   216,   125, -1000,    27, -1000,     1,\n",
+       "       -1000], dtype=int32)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 倒序\n",
+    "a[ : :-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\workspace\\tdxStock\\venv\\lib\\site-packages\\ipykernel_launcher.py:4: RuntimeWarning: invalid value encountered in power\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[nan,\n",
+       " 1.0,\n",
+       " nan,\n",
+       " 3.0,\n",
+       " nan,\n",
+       " 5.0,\n",
+       " 5.999999999999999,\n",
+       " 6.999999999999999,\n",
+       " 7.999999999999999,\n",
+       " 8.999999999999998]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 遍历一维数组\n",
+    "l = []\n",
+    "for i in a:\n",
+    "    l.append(i**(1/3.))\n",
+    "\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [10, 11, 12, 13],\n",
+       "       [20, 21, 22, 23],\n",
+       "       [30, 31, 32, 33],\n",
+       "       [40, 41, 42, 43]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 多维数组的索引，每个轴可以有一个索引。这些索引以逗号分隔的元组给出\n",
+    "\n",
+    "def f(x,y):\n",
+    "    return 10*x+y\n",
+    "\n",
+    "b = np.fromfunction(f,(5,4),dtype=int)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[2,3]  # 可以省去元组的括号 b[(2,3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[(2,3)]  # 第一轴和第二轴都明确了数值索引，得到的是一个具体的数值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1, 11, 21, 31, 41])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 对于第一轴 选取 0:5 , 对于第二轴选取 1， 得到一维数组\n",
+    "b[0:5, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1, 11, 21, 31, 41])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[ : ,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 11, 12, 13],\n",
+       "       [20, 21, 22, 23]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[1:3, : ] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 11, 12, 13],\n",
+       "       [20, 21, 22, 23]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 当提供的索引少于轴的数量时，缺失的索引被认为是完整的切片:\n",
+    "b[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([40, 41, 42, 43])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 2, 3)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 三维数组\n",
+    "c = np.array( [[[  0,  1,  2], \n",
+    "                [ 10, 12, 13]],\n",
+    "               [[100,101,102],\n",
+    "                [110,112,113]]])\n",
+    "c.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[100, 101, 102],\n",
+       "       [110, 112, 113]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c[1,...]  # ... 省去相邻的 :,:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  2,  13],\n",
+       "       [102, 113]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c[...,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3]\n",
+      "[10 11 12 13]\n",
+      "[20 21 22 23]\n",
+      "[30 31 32 33]\n",
+      "[40 41 42 43]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 对多维数组进行 迭代（Iterating） 是相对于第一个轴完成的\n",
+    "for row in b:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 但是，如果想要对数组中的每个元素执行操作，可以使用 flat 属性\n",
+    "for element in b.flat:\n",
+    "    print(element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,   1,   4,   9,  16,  25,  36,  49,  64,  81, 100, 121],\n",
+       "      dtype=int32)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(12)**2 \n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  1,  9, 64, 25], dtype=int32)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 使用索引数组进行索引\n",
+    "i = np.array( [ 1,1,3,8,5 ] ) \n",
+    "a[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9, 16],\n",
+       "       [81, 49]], dtype=int32)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "j = np.array( [ [ 3, 4], [ 9, 7 ] ] )\n",
+    "a[j] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[  0,   0,   0],\n",
+       "        [255,   0,   0],\n",
+       "        [  0, 255,   0],\n",
+       "        [  0,   0,   0]],\n",
+       "\n",
+       "       [[  0,   0,   0],\n",
+       "        [  0,   0, 255],\n",
+       "        [255, 255, 255],\n",
+       "        [  0,   0,   0]]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palette = np.array( [ [0,0,0],                # black\n",
+    "                      [255,0,0],              # red\n",
+    "                      [0,255,0],              # green\n",
+    "                      [0,0,255],              # blue\n",
+    "                      [255,255,255] ] )       # white\n",
+    "image = np.array( [ [ 0, 1, 2, 0 ],\n",
+    "                    [ 0, 3, 4, 0 ]  ] )\n",
+    "\n",
+    "# 当被索引数组 palette 是多维的时，单个索引数组 image 指的是第一个维度\n",
+    "# 这里只索引了第一维\n",
+    "palette[image]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 还可以为多个维度提供索引，每个维度的索引数组必须具有相同的形状\n",
+    "a = np.arange(12).reshape(3,4)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  5],\n",
+       "       [ 7, 11]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i = np.array( [ [0,1], [1,2] ] )  # 第一维的索引数组\n",
+    "j = np.array( [ [2,1], [3,3] ] )  # 第二维的索引数组\n",
+    "\n",
+    "a[i,j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  6],\n",
+       "       [ 6, 10]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[i,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 2,  1],\n",
+       "        [ 3,  3]],\n",
+       "\n",
+       "       [[ 6,  5],\n",
+       "        [ 7,  7]],\n",
+       "\n",
+       "       [[10,  9],\n",
+       "        [11, 11]]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[:,j] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, False],\n",
+       "       [False,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 使用布尔数组进行索引\n",
+    "a = np.arange(12).reshape(3,4)\n",
+    "b = a > 4\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5,  6,  7,  8,  9, 10, 11])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[b]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3],\n",
+       "       [4, 0, 0, 0],\n",
+       "       [0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[b] = 0 \n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 使用布尔值进行索引的第二种方法更类似于整数索引; 对于数组的每个维度，我们给出一个1D布尔数组，选择我们想要的切片\n",
+    "a = np.arange(12).reshape(3,4)\n",
+    "b1 = np.array([False,True,True])\n",
+    "b2 = np.array([True,False,True,False])\n",
+    "a[b1,:] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  2],\n",
+       "       [ 4,  6],\n",
+       "       [ 8, 10]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[:,b2]  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4, 10])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[b1,b2] "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
